:bookmark: CIFAR-10 Implementation_Using_VGG

--- a/Lab7_Basic_CNN.ipynb
+++ b/Lab7_Basic_CNN.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Lab7. Basic CNN.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyO4NzEd64UwpsfIL0UZ77HJ",
+      "authorship_tag": "ABX9TyOI8+6L9ABWB7vr6DeOIWNK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,74 +393,10 @@
         "colab_type": "text"
       },
       "source": [
-        "# Model Architecture"
+        "# Model Architecture\n",
+        "* 📌 <code>MLP -> CNN</code>\n",
+        "    * MLP에서 CNN으로 모델을 교체해준다"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XK21ySdvb2r9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "class MLP(nn.Module):  # nn.Module 상속\n",
-        "    def __init__(self, in_dim, out_dim, hid_dim, n_layer, act, dropout, use_bn, use_xavier):\n",
-        "        super(MLP, self).__init__()\n",
-        "        self.in_dim = in_dim\n",
-        "        self.out_dim = out_dim\n",
-        "        self.hid_dim = hid_dim\n",
-        "        self.n_layer = n_layer\n",
-        "        self.act = act\n",
-        "        self.dropout = dropout\n",
-        "        self.use_bn = use_bn\n",
-        "        self.use_xavier = use_xavier\n",
-        "        \n",
-        "        # ====== Create Linear Layers ====== #\n",
-        "        self.fc1 = nn.Linear(self.in_dim, self.hid_dim)\n",
-        "        \n",
-        "        self.linears = nn.ModuleList()\n",
-        "        self.bns = nn.ModuleList()\n",
-        "        for i in range(self.n_layer-1):\n",
-        "            self.linears.append(nn.Linear(self.hid_dim, self.hid_dim))\n",
-        "            if self.use_bn:\n",
-        "                self.bns.append(nn.BatchNorm1d(self.hid_dim))\n",
-        "                \n",
-        "        self.fc2 = nn.Linear(self.hid_dim, self.out_dim)\n",
-        "        \n",
-        "        # ====== Create Activation Function ====== #\n",
-        "        if self.act == 'relu':\n",
-        "            self.act = nn.ReLU()\n",
-        "        elif self.act == 'tanh':\n",
-        "            self.act == nn.Tanh()\n",
-        "        elif self.act == 'sigmoid':\n",
-        "            self.act = nn.Sigmoid()\n",
-        "        else:\n",
-        "            raise ValueError('no valid activation function selected!')\n",
-        "        \n",
-        "        # ====== Create Regularization Layer ======= #\n",
-        "        self.dropout = nn.Dropout(self.dropout)\n",
-        "        if self.use_xavier:\n",
-        "            self.xavier_init()\n",
-        "          \n",
-        "    def forward(self, x):\n",
-        "        x = self.act(self.fc1(x))\n",
-        "        for i in range(len(self.linears)):\n",
-        "            x = self.act(self.linears[i](x))\n",
-        "            x = self.bns[i](x)\n",
-        "            x = self.dropout(x)\n",
-        "        x = self.fc2(x)\n",
-        "        return x\n",
-        "    \n",
-        "    def xavier_init(self):\n",
-        "        for linear in self.linears:\n",
-        "            nn.init.xavier_normal_(linear.weight)\n",
-        "            linear.bias.data.fill_(0.01)\n",
-        "            \n",
-        "net = MLP(3072, 10, 100, 4, 'relu', 0.1, True, True) # Testing Model Construction"
-      ],
-      "execution_count": 12,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -469,7 +406,7 @@
         "colab": {}
       },
       "source": [
-        "class CNN(nn.Module):\n",
+        "class CNN1(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(CNN, self).__init__()\n",
         "        # 기본적인 CNN 구조를 만들어보자!\n",
@@ -501,8 +438,152 @@
         "        x = self.fc(x)\n",
         "        return x   "
       ],
-      "execution_count": 13,
+      "execution_count": 40,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8S2fNL29e_cJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Make VGG Architecture"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OnTaUBPTe31v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\"\"\"\n",
+        "Reference: https://github.com/kuangliu/pytorch-cifar/blob/master/models/vgg.py\n",
+        "\"\"\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bexme4gKe3cs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "cfg = {\n",
+        "    'VGG11': [64, 'M', 128, 'M', 256, 256, 'M', 512, 512, 'M', 512, 512, 'M'],\n",
+        "    'VGG13': [64, 64, 'M', 128, 128, 'M', 256, 256, 'M', 512, 512, 'M', 512, 512, 'M'],\n",
+        "    'VGG16': [64, 64, 'M', 128, 128, 'M', 256, 256, 256, 'M', 512, 512, 512, 'M', 512, 512, 512, 'M'],\n",
+        "    'VGG19': [64, 64, 'M', 128, 128, 'M', 256, 256, 256, 256, 'M', 512, 512, 512, 512, 'M', 512, 512, 512, 512, 'M'],\n",
+        "}"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RxZbbjAle7yO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class CNN(nn.Module):\n",
+        "    \n",
+        "    def __init__(self, model_code, in_channels, out_dim, act, use_bn):\n",
+        "        super(CNN, self).__init__()\n",
+        "        if act == 'relu':\n",
+        "            self.act = nn.ReLU()\n",
+        "        elif act == 'sigmoid':\n",
+        "            self.act = nn.Sigmoid()\n",
+        "        elif act == 'tanh':\n",
+        "            self.cat = nn.Tanh()\n",
+        "        else:\n",
+        "            raise ValueError(\"Not a valid activation function code\")\n",
+        "\n",
+        "        self.layers = self._make_layers(model_code, in_channels, use_bn)  # private function\n",
+        "        self.linear = nn.Linear(512, 10)\n",
+        "        self.classifier = nn.Sequential(nn.Linear(512, 256),\n",
+        "                                        self.act,\n",
+        "                                        nn.Linear(256, out_dim))  # 마지막 레이어에서는 Activation Function을 거치지 않는다\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.layers(x)\n",
+        "        x = x.view(x.size(0), -1)\n",
+        "        x = self.classifier(x)\n",
+        "        return x\n",
+        "\n",
+        "    def _make_layers(self, model_code, in_channels, use_bn):\n",
+        "        layers = []  # ModuleLIst를 만들어야하지 않아요?\n",
+        "                     # A. list로 만들어 Sequential함수 사용\n",
+        "        for x in cfg[model_code]:\n",
+        "            if x == 'M':\n",
+        "                layers += [nn.MaxPool2d(kernel_size=2, stride=2)]\n",
+        "            else:\n",
+        "                layers += [nn.Conv2d(in_channels=in_channels, \n",
+        "                                     out_channels = x,\n",
+        "                                     kernel_size=3,\n",
+        "                                     stride=1,\n",
+        "                                     padding=1)]\n",
+        "                if use_bn:\n",
+        "                    layers += [nn.BatchNorm2d(x)]         \n",
+        "                layers += [self.act]  # 여기서 끝냈을 때 문제점이 있을까?\n",
+        "                in_channels = x\n",
+        "        return nn.Sequential(*layers)"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YmNau_n3gMO6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8db25a72-062e-486e-9815-06fcd2cd2db5"
+      },
+      "source": [
+        "def dim_check():\n",
+        "    net = CNN('VGG11', 3)\n",
+        "    x = torch.randn(2, 3, 32, 32)\n",
+        "    return net(x).shape\n",
+        "\n",
+        "dim_check()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 10])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d-QVbfL_iHhP",
+        "colab_type": "text"
+      },
+      "source": [
+        "마지막 layer가 1x1이 되도 되는거야?<br>\n",
+        "마지막 layer는 전체 이미지를 보고 있다"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -686,7 +767,11 @@
       "source": [
         "def experiment(partition, args):\n",
         "\n",
-        "    net = CNN()\n",
+        "    net = CNN(model_code = args.model_code,\n",
+        "              in_channels = args.in_channels,\n",
+        "              out_dim = args.out_dim,\n",
+        "              act = args.act,\n",
+        "              use_bn = args.use_bn)\n",
         "    net.cuda()\n",
         "\n",
         "    criterion = nn.CrossEntropyLoss()\n",
@@ -738,7 +823,7 @@
         "    return vars(args), result  # vars(args)를 해주면 args를 dic로 저장해준다\n",
         "    # ===================================== #"
       ],
-      "execution_count": 23,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -813,7 +898,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 552
         },
-        "outputId": "ecabd498-7d1b-4019-f9c5-caf0e125e294"
+        "outputId": "66cc57d0-647e-4f48-bd76-485fca05e1b1"
       },
       "source": [
         "# ====== Random Seed Initialization ====== #\n",
@@ -823,15 +908,18 @@
         "\n",
         "parser = argparse.ArgumentParser()\n",
         "args = parser.parse_args(\"\")\n",
-        "args.exp_name = \"exp1_n_layer_hid_dim\"\n",
+        "args.exp_name = \"exp1_lr_model_code\"\n",
         "\n",
-        "# ====== Model Capacity ====== #\n",
+        "# ====== Model ====== #\n",
+        "args.model_code ='VGG11'\n",
+        "args.in_channels = 3\n",
         "args.out_dim = 10\n",
         "# args.hid_dim = 100\n",
         "args.act = 'relu'\n",
         "\n",
         "# ====== Regularization ======= #\n",
         "args.l2 = 0.00001\n",
+        "args.use_bn = True\n",
         "\n",
         "# ====== Optimizer & Training ====== #\n",
         "args.optim = 'RMSprop' #'RMSprop' #SGD, RMSprop, ADAM...\n",
@@ -843,9 +931,9 @@
         "\n",
         "# ====== Experiment Variable ====== #\n",
         "name_var1 = 'lr'\n",
-        "name_var2 = 'l2'\n",
-        "list_var1 = [0.0001]\n",
-        "list_var2 = [0.00001]\n",
+        "name_var2 = 'model_code'\n",
+        "list_var1 = [0.0001, 0.00001]\n",
+        "list_var2 = ['VGG11', 'VGG13']\n",
         "\n",
         "\n",
         "for var1 in list_var1:\n",
@@ -859,22 +947,22 @@
         "        setting, result = experiment(partition, deepcopy(args))\n",
         "        save_exp_result(setting, result)"
       ],
-      "execution_count": 30,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Namespace(act='relu', epoch=10, exp_name='exp1_n_layer_hid_dim', l2=1e-05, lr=0.0001, optim='RMSprop', out_dim=10, test_batch_size=1024, train_batch_size=256)\n",
-            "Epoch 0, Acc(train/val): 34.01/44.70, Loss(train/val) 1.83/1.54. Took 6.89 sec\n",
-            "Epoch 1, Acc(train/val): 48.87/52.45, Loss(train/val) 1.43/1.36. Took 6.78 sec\n",
-            "Epoch 2, Acc(train/val): 53.46/55.15, Loss(train/val) 1.31/1.29. Took 6.66 sec\n",
-            "Epoch 3, Acc(train/val): 56.98/57.23, Loss(train/val) 1.22/1.22. Took 6.89 sec\n",
-            "Epoch 4, Acc(train/val): 59.01/57.84, Loss(train/val) 1.16/1.21. Took 6.90 sec\n",
-            "Epoch 5, Acc(train/val): 60.95/59.45, Loss(train/val) 1.12/1.17. Took 6.78 sec\n",
-            "Epoch 6, Acc(train/val): 62.46/60.07, Loss(train/val) 1.06/1.15. Took 7.02 sec\n",
-            "Epoch 7, Acc(train/val): 63.60/61.17, Loss(train/val) 1.04/1.12. Took 6.84 sec\n",
-            "Epoch 8, Acc(train/val): 65.50/61.86, Loss(train/val) 0.98/1.10. Took 6.87 sec\n",
-            "Epoch 9, Acc(train/val): 66.08/62.97, Loss(train/val) 0.97/1.08. Took 6.85 sec\n"
+            "Namespace(act='relu', epoch=10, exp_name='exp1_lr_model_code', in_channels=3, l2=1e-05, lr=0.0001, model_code='VGG11', optim='RMSprop', out_dim=10, test_batch_size=1024, train_batch_size=256, use_bn=True)\n",
+            "Epoch 0, Acc(train/val): 36.97/41.74, Loss(train/val) 1.60/1.57. Took 6.43 sec\n",
+            "Epoch 1, Acc(train/val): 50.81/54.94, Loss(train/val) 1.31/1.23. Took 6.47 sec\n",
+            "Epoch 2, Acc(train/val): 59.39/59.48, Loss(train/val) 1.11/1.11. Took 6.49 sec\n",
+            "Epoch 3, Acc(train/val): 66.09/66.78, Loss(train/val) 0.94/0.93. Took 6.30 sec\n",
+            "Epoch 4, Acc(train/val): 69.91/67.46, Loss(train/val) 0.84/0.92. Took 6.53 sec\n",
+            "Epoch 5, Acc(train/val): 73.63/70.59, Loss(train/val) 0.74/0.86. Took 6.57 sec\n",
+            "Epoch 6, Acc(train/val): 76.44/70.89, Loss(train/val) 0.67/0.87. Took 6.69 sec\n",
+            "Epoch 7, Acc(train/val): 79.85/71.95, Loss(train/val) 0.58/0.90. Took 6.58 sec\n",
+            "Epoch 8, Acc(train/val): 82.30/75.17, Loss(train/val) 0.52/0.76. Took 6.55 sec\n",
+            "Epoch 9, Acc(train/val): 84.18/73.73, Loss(train/val) 0.46/0.81. Took 6.51 sec\n"
           ],
           "name": "stdout"
         },
@@ -885,9 +973,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-c8e1a8de8a5c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0msetting\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexperiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpartition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m         \u001b[0msave_exp_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msetting\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-61-7999d97fbb28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0msetting\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexperiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpartition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0msave_exp_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msetting\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m<ipython-input-24-fb2cf709573e>\u001b[0m in \u001b[0;36msave_exp_result\u001b[0;34m(setting, result)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./results/{}-{}.json'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhash_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msetting\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 결과 dictionary에 setting값을 더해준다 => Dic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# JSON 포멧으로 dictionary 값 저장\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './results/exp1_n_layer_hid_dim-6bb6e9.json'"
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './results/exp1_lr_model_code-95f986.json'"
           ]
         }
       ]
